info_clinicas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: info-clinicas-dev
spec:
  selector: 
    app: info-clinicas-dev # indica quais os pods alvo referenciados pela label.
  ports:
    - port: 80
      #targetPort: 80
  type: LoadBalancer # seleciona o tipo de service que sera usado
